# CodiceFiscale

./: CMakeLists.txt  CodiceFiscale.cpp  CodiceFiscale.h  main.cpp
.github/workflows/: c-cpp.yml
include/: CodiceFiscale.h
resources/: codice_controllo_dispari.csv  codice_controllo_pari.csv  codice_controllo_resto.csv  elenco_codici_zone.csv
src/: CodiceFiscale.cpp  main.cpp
